# staccato

./: .gitignore  ENDS_LOGIC_CHANGES.md  PAGE_FORMATTING_CHANGES.md  PAGE_VALIDATION_IMPLEMENTATION.md  README.md  pyproject.toml  run_test.py
docs/: ARCHITECTURE.md  GOOGLE_LLM_SETUP.md  LMSTUDIO_SETUP.md
examples/: google_llm_example.py  lmstudio_example.py
src/staccato/: __init__.py  models.py
src/staccato/config/: __init__.py  models.py
src/staccato/core/: __init__.py  assembler.py  engine.py  stitcher.py
src/staccato/internal/: models.py  prompts.py
src/staccato/llm/: __init__.py  base.py  mock.py  openai.py  response_schema.py  validation.py
src/staccato/preprocess/: __init__.py  base.py  docx.py  factory.py  markup.py  pdfplumber.py  pymupdf4llm.py  text.py
src/staccato/utils/: __init__.py  logging.py
